--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_API_BASE_URL=https://api.jikan.moe/v4
+
+GITHUB_CLIENT=9f88847fe27c3f7eee02
+GITHUB_SECRET=317c074d14899a16d7ccbb2ee8d81ff10a297ae8
+
+NEXTAUTH_SECRET=moonimelist091
