--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
-    "next": "14.0.4",
+    "@prisma/client": "^5.9.0",
+    "eslint-config-next": "^14.1.0",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.9.0",
     "tailwindcss": "^3.3.0"
   }
 }
